--- a/TerrariaBot/TerrariaBot.csproj
+++ b/TerrariaBot/TerrariaBot.csproj
@@ -1,10 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>0.1.0-alpha</Version>
+    <Version>0.2.0-alpha</Version>
     <Authors>Xwilarg</Authors>
     <Company />
     <Product />
@@ -13,8 +13,8 @@
     <PackageProjectUrl>https://github.com/Xwilarg/TerrariaBot</PackageProjectUrl>
     <RepositoryUrl>https://github.com/Xwilarg/TerrariaBot</RepositoryUrl>
     <PackageTags>terraria terraria-bot bot-library</PackageTags>
-    <AssemblyVersion>0.0.1.0</AssemblyVersion>
-    <FileVersion>0.0.1.0</FileVersion>
+    <AssemblyVersion>0.0.2.0</AssemblyVersion>
+    <FileVersion>0.0.2.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
